--- a/alarm_system/pubspec.yaml
+++ b/alarm_system/pubspec.yaml
@@ -24,10 +24,17 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_login: ^1.0.14
+  flutter_redux: ^0.6.0
+  redux: ^4.0.0+3
+  intl: ^0.16.1
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+
 
 dev_dependencies:
   flutter_test:
